--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sundai Chat Interface</title>
+    <title>Continual Chat Interface</title>
     <style>
         * {
             margin: 0;
@@ -162,14 +162,14 @@
 </head>
 <body>
     <div class="header">
-        <h1>🤖 Sundai Chat Interface</h1>
+        <h1>🕳️ Continual Chat Interface</h1>
     </div>
 
     <div class="chat-container" id="chatContainer">
         <div class="message assistant">
             <div class="message-avatar">🤖</div>
             <div class="message-content">
-                Hello! I'm your Sundai assistant. How can I help you today?
+                Hello! I'm your Continual assistant. How can I help you today?
             </div>
         </div>
     </div>
