--- a/chat.html
+++ b/chat.html
@@ -27,7 +27,9 @@
             padding: 1rem;
             text-align: center;
             border-bottom: 1px solid #404040;
-            position: relative;
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
 
         .header h1 {
@@ -68,6 +70,7 @@
             flex: 1;
             display: flex;
             flex-direction: column;
+            height: calc(100vh - 73px); /* Subtract header height */
         }
 
         .chat-container {
@@ -77,6 +80,7 @@
             max-width: 768px;
             margin: 0 auto;
             width: 100%;
+            height: 0; /* Forces flex to control the height */
         }
 
         .message {
@@ -130,6 +134,9 @@
             background-color: #2d2d2d;
             padding: 1rem;
             border-top: 1px solid #404040;
+            position: sticky;
+            bottom: 0;
+            z-index: 100;
         }
 
         .input-wrapper {
@@ -179,6 +186,8 @@
             text-align: center;
             padding: 1rem;
             color: #888;
+            background-color: #1a1a1a;
+            border-top: 1px solid #404040;
         }
 
         .loading.show {
